--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "prod": "parcel build src/index.html"
+    "prod": "parcel build src/index.html && npm run copy",
+    "copy": "cp src/_redirects dist"
   },
   "keywords": [],
   "author": "",
